[package]
edition = "2021"
name = "fast-qrgen"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.12.2"
base64 = "0.21.5"
qrcode-generator = "4.1.9"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
